# iupac

./: .gitignore  Cargo.toml  README.md
crates/blue_book/: Cargo.toml
crates/blue_book/examples/: adenine.dot  adenine.json  caffeine.dot  caffeine.json  cytosine.json  dopamine.json  guanine.dot  guanine.json  isobutane.dot  isobutane.json  isopropanol.dot  isopropanol.json  salbutamol.json  thymine.json
crates/blue_book/src/: graph.rs  lib.rs  named_structure.rs  parser.rs  plugin.rs  scanner.rs
crates/blue_book/src/chapters/: mod.rs
crates/blue_book/src/chapters/p_1_general/p_11_scope/: mod.rs
crates/blue_book/src/chapters/p_1_general/p_14_general_rules/: mod.rs  p_14_1_bonding_number.rs  p_14_2_multiplicative_prefixes.rs  p_14_3_locants.rs
crates/blue_book/src/chapters/p_1_general_principles/: mod.rs  p_14_general_rules.rs
crates/blue_book/src/chapters/p_2_hydrides/: mod.rs
crates/blue_book/src/chapters/p_2_hydrides/p_21_simple_hydrides/: mod.rs  p_21_1_mononuclear_hydrides.rs  p_21_2_acyclic_hydrides.rs
crates/blue_book/src/chapters/p_2_hydrides/p_22_monocyclic_hydrides/: mod.rs  p_22_1_monocyclic_hydocarbons.rs  p_22_2_heteromonocyclic_hydrides.rs
crates/blue_book/src/chapters/p_3_substituent_groups/: mod.rs  p_33_suffixes.rs  p_35_characteristic_group_prefixes.rs
crates/blue_book/src/graph/: bases.rs  mod.rs
crates/blue_book/tests/: graph.rs
crates/gradient_descent/: Cargo.toml
crates/gradient_descent/src/: main.rs
crates/inchi/: Cargo.toml
crates/inchi/src/: lib.rs  parser.rs
crates/inchi/tests/: inchi.rs
crates/parsing/: Cargo.toml
crates/parsing/src/: dfa.rs
crates/red_book/: Cargo.toml
crates/red_book/src/: elements.rs
crates/structural_formula/: Cargo.toml
crates/structural_formula/src/: characteristic_groups.rs  hydrides.rs  lib.rs  rect.rs  structure.rs  substitution.rs  svg.rs  transform.rs
crates/structural_formula/tests/: svg.rs
examples/: adenine.json  caffeine.json  cytosine.dot  dopamine.dot  dopamine.json  isobutane.dot  salbutamol.dot  salbutamol.json  thymine.dot  thymine.json
src/: dfa.rs  graph.rs  inchi.rs  lib.rs  main.rs  parser.rs  pubchem.rs  scanner.rs  test.rs
src/graph/: bases.rs
src/inchi/: parser.rs  scanner.rs
tests/: graph.rs  inchi.rs
(+4 files in other folders)
