[workspace]
resolver = "2"
members = [
    "crates/blue_book",
    "crates/inchi",
    "crates/parsing",
    "crates/gradient_descent",
    "crates/structural_formula",
]
default-members = [
    "crates/blue_book",
    "crates/inchi",
    "crates/parsing",
    "crates/structural_formula",
]

[workspace.dependencies]
blue_book.path = "crates/blue_book"
inchi.path = "crates/inchi"
parsing.path = "crates/parsing"
gradient_descent.path = "crates/gradient_descent"
structural_formula.path = "crates/structural_formula"

glam = "0.28.0"
lazy_static = "1.4.0"
paste = "1.0.15"
petgraph = { version = "0.6.5", features = ["serde-1"] }
serde = "1.0.204"
serde_json = "1.0.120"
